<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_line_with_text"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textFormatScale"
                android:layout_width="match_parent"
                android:layout_height="@dimen/description_settings_height"
                android:gravity="center"
                android:layout_marginStart="@dimen/description_marginStart_End"
                android:layout_marginEnd="@dimen/description_marginStart_End"
                android:text="@string/screen_format_settings"
                android:textColor="@color/gray_in_settings"
                android:textSize="@dimen/description_settings_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="7"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btn1x1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="1x1"
                        android:textColor="@color/gray_in_settings"
                        android:textSize="@dimen/settings_item_text_size"
                        tools:ignore="HardcodedText,NestedWeights" />

                    <TextView
                        android:id="@+id/btn4x5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="4x5"
                        android:textColor="@color/gray_in_settings"
                        android:textSize="@dimen/settings_item_text_size"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/btn9x16"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:text="9x16"
                        android:textColor="@color/gray_in_settings"
                        android:textSize="@dimen/settings_item_text_size"
                        android:src="@drawable/no_last_video"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center|top"
                        android:textSize="@dimen/under_item_text_size"
                        android:text="@string/instagram"
                        android:textColor="@color/gray_dark_in_settings"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/gray_dark_in_settings"
                        android:textSize="@dimen/under_item_text_size"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/instagram_stories"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:textSize="@dimen/under_item_text_size"
                        android:text="@string/instagram_stories"
                        android:textColor="@color/gray_dark_in_settings"
                        tools:ignore="NestedWeights" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_line_only_buttons"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btn16x10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="16x10"
                android:textColor="@color/gray_in_settings"
                android:textSize="@dimen/settings_item_text_size"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/btn16x9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="16x9"
                android:textColor="@color/gray_in_settings"
                android:textSize="@dimen/settings_item_text_size"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/standart_settings_line"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textPreviewAndEdit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/description_settings_height"
                android:gravity="center"
                android:layout_marginStart="@dimen/description_marginStart_End"
                android:layout_marginEnd="@dimen/description_marginStart_End"
                android:textColor="@color/gray_in_settings"
                android:textSize="@dimen/description_settings_text_size"
                android:text="@string/preview_and_edit_settings"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btnYes"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="Yes"
                    android:textColor="@color/gray_in_settings"
                    android:textSize="@dimen/settings_item_text_size"
                    tools:ignore="HardcodedText"/>

                <TextView
                    android:id="@+id/btnNo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="No"
                    android:textColor="@color/gray_in_settings"
                    android:textSize="@dimen/settings_item_text_size"
                    tools:ignore="HardcodedText"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>